(Bug 5073) Don't use width:100% on #content
The #content element is nested and may have applied margins to it that
could cause scrollbars. So let's use nested-collapse instead of the
default.

--- a/htdocs/scss/schemes/celerity.scss
+++ b/htdocs/scss/schemes/celerity.scss
@@ -144,7 +144,7 @@ footer { border-top: 4px double $strong-accent-color;
  */
 
 #content {
-    @include grid-row(false);
+    @include grid-row( nest-collapse );
 }
 
 @import "schemes/page-layout-hacks";
